Name: media-index
Version: 0.1.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Stability: Alpha
Copyright: Copyright (c) 2005 John Goerzen
Build-Depends: haskell-src, network, unix, parsec, MissingH>=0.10.7

Executable: media-index
Extensions: ExistentialQuantification, AllowOverlappingInstances,
    AllowUndecidableInstances
GHC-Options: -O2
Main-Is: media-index.hs

